--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,8 @@ website:
         href: https://twitter.com/shaneascaggs
       - icon: github
         href: https://github.com/sascaggs
+      - icon: {{< iconify ri:bluesky-fill >}}
+        href: https://bsky.app/profile/sascaggs.bsky.social
   page-footer:
     right: "Built with [Quarto](https://quarto.org/)"
     left: "&copy; Copyright 2024, Shane A. Scaggs"
