--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,7 +20,7 @@ website:
         href: https://twitter.com/shaneascaggs
       - icon: github
         href: https://github.com/sascaggs
-      - icon: {{< iconify ri:bluesky-fill >}}
+      - text: {{< iconify ri:bluesky-fill >}}
         href: https://bsky.app/profile/sascaggs.bsky.social
   page-footer:
     right: "Built with [Quarto](https://quarto.org/)"
