--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,8 +16,8 @@ website:
       - posts.qmd
       - gallery.qmd
     right:
-      #- icon: "twitter"
-      #  href: "https://twitter.com/shaneascaggs"
+      - icon: "twitter"
+        href: "https://twitter.com/shaneascaggs"
       - icon: "github"
         href: "https://github.com/sascaggs"
       - icon: "{{< iconify ri:bluesky-fill >}}"
