--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,8 @@ website:
         text: About
       - href: CV.qmd
         text: CV
-      - posts.qmd
+      - href: posts.qmd
+        text: Blog
       - gallery.qmd
     right:
       - icon: "twitter"
