--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
         text: About
       - href: CV.qmd
         text: CV
-      - href: posts.qmd
+      - href: posts/posts.qmd
         text: Blog
       - gallery.qmd
     right:
